@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace omsu.imit {
    namespace controllers {
      class omsu.imit.controllers.FrontController {
          + main()
          + welcome()
      }
    }
  }
  

  namespace omsu.imit {
    namespace controllers {
      class omsu.imit.controllers.ShiftController {
          - LOGGER : Logger
          + createReport()
          + deleteInn()
          + deleteOldReports()
          + getFile()
          + getReceipts()
          + getUser()
          + insertInn()
          + insertKKTs()
          + insertReceiptsFromUpdate()
          + insertReceiptsNoUpdate()
          + insertUser()
          + isBaseUpdating()
          + updateBase()
      }
    }
  }
  

  omsu.imit.controllers.FrontController o-- omsu.imit.services.InnService : innService
  omsu.imit.controllers.FrontController o-- omsu.imit.services.UserService : userService
  omsu.imit.controllers.ShiftController o-- omsu.imit.services.InnService : innService
  omsu.imit.controllers.ShiftController o-- omsu.imit.services.KktService : kktService
  omsu.imit.controllers.ShiftController o-- omsu.imit.services.OfdService : ofdService
  omsu.imit.controllers.ShiftController o-- omsu.imit.services.ReceiptService : receiptService
  omsu.imit.controllers.ShiftController o-- omsu.imit.services.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
